--- a/xuanzhuan/templates/add_table/Controller.java.j2
+++ b/xuanzhuan/templates/add_table/Controller.java.j2
@@ -1,6 +1,7 @@
 package {{package}};
 
 import org.springframework.stereotype.Controller;
+import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
@@ -16,17 +17,17 @@ public class {{table.name | to_upper_camel_case}}Controller {
 	}
 
 	@GetMapping("/register")
-	public String register() {
+	public String register({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
 		return "{{table.name | to_lower_camel_case}}Register";
 	}
 
 	@GetMapping("/edit")
-	public String edit() {
+	public String edit(Model model) {
 		return "{{table.name | to_lower_camel_case}}Edit";
 	}
 
 	@GetMapping("/list")
-	public String list() {
+	public String list(Model model) {
 		return "{{table.name | to_lower_camel_case}}List";
 	}
 }
