--- a/xuanzhuan/templates/add_table/DetailForm.java.j2
+++ b/xuanzhuan/templates/add_table/DetailForm.java.j2
@@ -1,1 +1,14 @@
-// {{package}}
+package {{package}};
+
+import java.time.LocalDate;
+
+import jakarta.persistence.Column;
+import lombok.Data;
+
+@Data
+class {{table.name | to_upper_camel_case}}DetailForm {
+{% for column in table.columnList %}
+    @Column(name="{{column.dbName}}")
+    {{column.langType}} {{column.langName}};
+{% endfor %}
+}
