--- a/xuanzhuan/templates/add_table/Service.java.j2
+++ b/xuanzhuan/templates/add_table/Service.java.j2
@@ -1,1 +1,6 @@
-// {{package}}
+package {{package}};
+
+import org.springframework.beans.factory.annotation.Autowired;
+
+public class {{table.name | to_upper_camel_case}}Service {public void test() {return;}
+}
