--- a/xuanzhuan/templates/add_table/Repository.java.j2
+++ b/xuanzhuan/templates/add_table/Repository.java.j2
@@ -1,1 +1,6 @@
-// {{package}}
+package {{package}};
+
+import org.springframework.data.jpa.repository.JpaRepository;
+
+public interface {{table.name | to_upper_camel_case}}Repository extends JpaRepository<{{table.name | to_upper_camel_case}}, Integer>{
+}
