--- a/xuanzhuan/templates/add_table/edit.html.j2
+++ b/xuanzhuan/templates/add_table/edit.html.j2
@@ -1,2 +1,15 @@
 <!-- 編集ページ -->
-<title>編集ページ</title>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>編集ページ</title>
+</head>
+<body>
+    <form action="/user/edit" method="post">
+        <input type="submit" value="更新" name="update">
+        <input type="submit" value="削除" name="delete">
+    </form>
+</body>
+</html>
