--- a/xuanzhuan/templates/add_table/Service.java.j2
+++ b/xuanzhuan/templates/add_table/Service.java.j2
@@ -13,4 +13,18 @@ public class {{table.name | to_upper_camel_case}}Service {
         {{table.name | to_lower_camel_case}}Repository.count();
         return;
     }
+
+    public void register({{table.name | to_upper_camel_case}} {{table.name | to_lower_camel_case}}) {
+        {{table.name | to_lower_camel_case}}Repository.save({{table.name | to_lower_camel_case}});
+        return;
+    }
+
+    public void update({{table.name | to_upper_camel_case}} {{table.name | to_lower_camel_case}}) {
+        {{table.name | to_lower_camel_case}}Repository.save({{table.name | to_lower_camel_case}});
+        return;
+    }
+
+    public void delete(Integer id) {
+        {{table.name | to_lower_camel_case}}Repository.deleteById(id);
+    }
 }
