--- a/xuanzhuan/templates/add_use_case/ServiceTest.java.j2
+++ b/xuanzhuan/templates/add_use_case/ServiceTest.java.j2
@@ -1,23 +1,11 @@
-import static org.hamcrest.CoreMatchers.*;
-import static org.junit.Assert.*;
+package {{package}};
 
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
+import static org.junit.jupiter.api.Assertions.*;
 
-public class CalculatorTest {
-
-    @Test
-    public void maltiplicationで5と2の乗算結果が取得できる() throws Exception {
-        Calculator sut = new Calculator();
-        int expected = 10;
-        int actual = sut.maltiplication(5, 2);
-        assertThat(actual,is(expected));
-    }
-
-    @Test
-    public void divisionで5と8の除算結果が取得できる() throws Exception {
-        Calculator sut = new Calculator();
-        int expected = 
-
+class {{use_case.function_name | to_upper_camel_case}}ServiceTest {
+    @Test void {{ use_case.description }}() {
+        App classUnderTest = new App();
+        assertNotNull(classUnderTest.getGreeting(), "app should have a greeting");
     }
 }
-
