説明をテストメソッド名にしていたが日本語のメソッド名は問題アリなので修正

--- a/xuanzhuan/templates/add_use_case/ServiceTest.java.j2
+++ b/xuanzhuan/templates/add_use_case/ServiceTest.java.j2
@@ -4,7 +4,7 @@ import org.junit.jupiter.api.Test;
 import static org.junit.jupiter.api.Assertions.*;
 
 class {{use_case.function_name | to_upper_camel_case}}ServiceTest {
-    @Test void {{ use_case.description }}() {
+    @Test void {{ use_case.function_name }}() {
         App classUnderTest = new App();
         assertNotNull(classUnderTest.getGreeting(), "app should have a greeting");
     }
