アプリケーション層の出力追加

--- a/xuanzhuan/templates/add_use_case/Service.java.j2
+++ b/xuanzhuan/templates/add_use_case/Service.java.j2
@@ -1,1 +1,7 @@
 package {{package}};
+
+class {{use_case.function_name | to_upper_camel_case}}Service {
+
+    public void {{ use_case.function_name }}Service({{use_case.function_name | to_upper_camel_case}}Command command) {
+    }
+}
