--- a/xuanzhuan/templates/add_use_case/ServiceTest.java.j2
+++ b/xuanzhuan/templates/add_use_case/ServiceTest.java.j2
@@ -5,7 +5,7 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class {{use_case.function_name | to_upper_camel_case}}ServiceTest {
     @Test void {{ use_case.function_name }}() {
-        App classUnderTest = new App();
-        assertNotNull(classUnderTest.getGreeting(), "app should have a greeting");
+        final {{use_case.function_name | to_upper_camel_case}}Command command = new {{use_case.function_name | to_upper_camel_case}}Command();
+        final {{use_case.function_name | to_upper_camel_case}}Service service = new {{use_case.function_name | to_upper_camel_case}}Service();
     }
 }
