--- a/xuanzhuan/templates/add_table/Controller.java.j2
+++ b/xuanzhuan/templates/add_table/Controller.java.j2
@@ -8,6 +8,8 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.ResponseBody;
 
+{% set key=table.name | to_upper_camel_case + "Service" %}import {{import_dict[key]}};
+
 @Controller
 @RequestMapping("/{{table.name | to_lower_camel_case}}")
 public class {{table.name | to_upper_camel_case}}Controller {
@@ -28,54 +30,54 @@ public class {{table.name | to_upper_camel_case}}Controller {
 	 * @param model
 	 * @return
 	 */
-	@GetMapping("/register")
-	public String registerIndex({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
-		return "{{table.name | to_lower_camel_case}}Register";
-	}
-
-	/**
-	 * 詳細画面
-	 * @param form
-	 * @param model
-	 * @return
-	 */
-	@GetMapping("/edit")
-	public String editIndex({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
-		return "{{table.name | to_lower_camel_case}}Edit";
-	}
-
-	/**
-	 * 一覧画面
-	 * @param form
-	 * @param model
-	 * @return
-	 */
-	@GetMapping("/list")
-	public String listIndex({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
-		return "{{table.name | to_lower_camel_case}}List";
-	}
-
-	@PostMapping("/register")
-	public String register({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
-		{{table.name | to_upper_camel_case}} {{table.name | to_lower_camel_case}} = new {{table.name | to_upper_camel_case}}();
-		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Id(form.get{{table.name | to_upper_camel_case}}Id());
-		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Name(form.get{{table.name | to_upper_camel_case}}Name());
-		{{table.name | to_lower_camel_case}}Service.register({{table.name | to_lower_camel_case}});
-		return "{{table.name | to_lower_camel_case}}Register";
-	}
-
-	@PostMapping(path = "/edit", params = "update")
-	public String update({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
-		{{table.name | to_upper_camel_case}} {{table.name | to_lower_camel_case}} = new {{table.name | to_upper_camel_case}}();
-		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Id(form.get{{table.name | to_upper_camel_case}}Id());
-		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Name(form.get{{table.name | to_upper_camel_case}}Name());
-		{{table.name | to_lower_camel_case}}Service.update({{table.name | to_lower_camel_case}});
-		return "{{table.name | to_lower_camel_case}}Edit";
-	}
-
-	@PostMapping(path = "/edit", params = "delete")
-	public String delete({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
-		{{table.name | to_lower_camel_case}}Service.delete(form.get{{table.name | to_upper_camel_case}}Id());
-		return "{{table.name | to_lower_camel_case}}Edit";
-	}
+//	@GetMapping("/register")
+//	public String registerIndex({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
+//		return "{{table.name | to_lower_camel_case}}Register";
+//	}
+//
+//	/**
+//	 * 詳細画面
+//	 * @param form
+//	 * @param model
+//	 * @return
+//	 */
+//	@GetMapping("/edit")
+//	public String editIndex({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
+//		return "{{table.name | to_lower_camel_case}}Edit";
+//	}
+//
+//	/**
+//	 * 一覧画面
+//	 * @param form
+//	 * @param model
+//	 * @return
+//	 */
+//	@GetMapping("/list")
+//	public String listIndex({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
+//		return "{{table.name | to_lower_camel_case}}List";
+//	}
+//
+//	@PostMapping("/register")
+//	public String register({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
+//		{{table.name | to_upper_camel_case}} {{table.name | to_lower_camel_case}} = new {{table.name | to_upper_camel_case}}();
+//		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Id(form.get{{table.name | to_upper_camel_case}}Id());
+//		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Name(form.get{{table.name | to_upper_camel_case}}Name());
+//		{{table.name | to_lower_camel_case}}Service.register({{table.name | to_lower_camel_case}});
+//		return "{{table.name | to_lower_camel_case}}Register";
+//	}
+//
+//	@PostMapping(path = "/edit", params = "update")
+//	public String update({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
+//		{{table.name | to_upper_camel_case}} {{table.name | to_lower_camel_case}} = new {{table.name | to_upper_camel_case}}();
+//		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Id(form.get{{table.name | to_upper_camel_case}}Id());
+//		{{table.name | to_lower_camel_case}}.set{{table.name | to_upper_camel_case}}Name(form.get{{table.name | to_upper_camel_case}}Name());
+//		{{table.name | to_lower_camel_case}}Service.update({{table.name | to_lower_camel_case}});
+//		return "{{table.name | to_lower_camel_case}}Edit";
+//	}
+//
+//	@PostMapping(path = "/edit", params = "delete")
+//	public String delete({{table.name | to_upper_camel_case}}DetailForm form, Model model) {
+//		{{table.name | to_lower_camel_case}}Service.delete(form.get{{table.name | to_upper_camel_case}}Id());
+//		return "{{table.name | to_lower_camel_case}}Edit";
+//	}
 }
