--- a/xuanzhuan/templates/add_table/list.html.j2
+++ b/xuanzhuan/templates/add_table/list.html.j2
@@ -1,2 +1,9 @@
 <!-- 一覧ページ -->
 <title>一覧ページ</title>
+<h1>一覧ページ</h1>
+<form th:action="@{/{{table.name | to_lower_camel_case}}/list}" method="post" th:object="${% raw %}{{% endraw %}{{table.name | to_lower_camel_case}}ListForm}">{% for column in table.columnList %}
+  <input type="text" th:field="*{% raw %}{{% endraw %}{{column.langName}}}" /><br>{% endfor %}
+  <input type="submit" value="検索" name="search"/><br>
+  <span>ページネーション</span><br>
+  <span>検索結果</span><br>
+</form>
