--- a/xuanzhuan/templates/add_table/SearchDao.java.j2
+++ b/xuanzhuan/templates/add_table/SearchDao.java.j2
@@ -1,6 +1,19 @@
 package {{package}};
 
-import org.springframework.data.jpa.repository.JpaRepository;
+import java.util.ArrayList;
+import java.util.List;
 
-public interface {{table.name | to_upper_camel_case}}FindDao extends JpaRepository<{{table.name | to_upper_camel_case}}FindEntity, Integer>{
+import org.springframework.stereotype.Component;
+import org.springframework.transaction.annotation.Propagation;
+import org.springframework.transaction.annotation.Transactional;
+
+@Component
+public class {{table.name | to_upper_camel_case}}SearchDao {
+
+    @Transactional(propagation = Propagation.REQUIRED, rollbackFor = Throwable.class)
+    public List<{{table.name | to_upper_camel_case}}SearchEntity> search({{table.name | to_upper_camel_case}}SearchParams params){
+        List<{{table.name | to_upper_camel_case}}SearchEntity> entityList = new ArrayList<>();
+        return entityList;
+    }
 }
+
